# repo-sentinel-lite

./: .gitignore  .pre-commit-hooks.yaml  CONTRIBUTING.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  code-scanning.yml  pre-commit-provider.yml  release.yml
docs/: baseline-review.md  case-study-self-dogfooding.md  cli-recipes.md  consumer-minimal-setup.md  output-format-stability.md  performance-envelope-v0.8.md  pre-commit-integration.md  production-pypi-decision.md  production-pypi-first-release-plan.md  production-pypi-gap-list.md  production-pypi-manual-checklist.md  production-pypi-release-candidate-note.md  production-pypi-release-day-note.md  profile-pin-note.md  public-go-live-checklist.md  public-go-live-plan.md  public-readiness-v0.1.md  release-handoff-v0.6.1.md  release-notes-v0.7.0.md  release-notes-v0.7.1.md  release-notes-v0.8.0.md  reviewer-brief.md  self-dogfooding.md  symlink-policy.md  threat-model.md  v0.7-adoption-release.md
examples/: README.md  sample-baseline.json
examples/clean-repo/: README.md
examples/dirty-repo/: .env  README.md
examples/dirty-repo/secrets/: service.pem
examples/outputs/: clean-baseline.json  clean-scan.json  dirty-baseline.json  dirty-fail-on-findings.txt  dirty-scan.json
scripts/: benchmark-performance-envelope.ps1
src/repo_sentinel/: __init__.py  api.py  baseline.py  cli.py  config.py  coverage.py  redaction.py  report.py  sarif.py  scanner.py  walk.py
src/repo_sentinel/rules/: __init__.py  entropy.py  hygiene.py  registry.py  structured.py
tests/: conftest.py  test_adoption_release_docs.py  test_api.py  test_cli.py  test_cli_recipes.py  test_config.py  test_consumer_minimal_setup_docs.py  test_docs_examples.py  test_markdown_links.py  test_output_format_stability_docs.py  test_pre_commit_integration_docs.py  test_python_compatibility.py  test_release_docs.py  test_scanner.py  test_self_dogfooding_docs.py  test_symlink_policy.py  test_threat_model_docs.py  test_v08_release_docs.py  test_v08_semantics.py  validate_pre_commit_provider.py
tests/fixtures/: sample_repo_report.json  sample_repo_report.sarif.json
tests/fixtures/sample_repo/: .env  README.md
tests/fixtures/sample_repo/certs/: service.pem
tests/fixtures/sample_repo/keys/: id_rsa
tests/fixtures/sample_repo/notes/: tokens.txt
tests/fixtures/sample_repo/vault/: archive.kdbx
