[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-sentinel-lite"
version = "0.6.0"
description = "Minimal repository scanning CLI."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/stacknil/repo-sentinel-lite"
Repository = "https://github.com/stacknil/repo-sentinel-lite"
Issues = "https://github.com/stacknil/repo-sentinel-lite/issues"
Releases = "https://github.com/stacknil/repo-sentinel-lite/releases"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.11.0",
]

[project.scripts]
repo-sentinel = "repo_sentinel.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
